--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
             </div>
         </nav>
         <!-- page content start here -->
-         <div class="containers mobilevw">
+        <div class="containers mobilevw">
             <div class="contents">
                 <h1 class="fw-bold">I Am Akinola Victor.
                     <span>Glad to see you!</span>
                 </h1>
-                <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+                <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
+                    website Look through some of my work and experience! If you like what you see and have a project you
+                    need coded, don't hesitate to contact me.</p>
                 <p class="text-primary fw-semibold">LET'S CONNECT</p>
                 <div>
                     <div style="display: inline-block; text-align: center;" class="social-icons">
@@ -67,7 +69,7 @@
                     </div>
                 </div>
             </div>
-         </div>
+        </div>
     </div>
     <!--Desktop screen1-->
     <div class="wrap noDisplay">
@@ -76,11 +78,12 @@
                 <h1 class="fw-bold fs-40">360 Agency Design</h1>
                 <span>
                     <p class="fs-4">Design 360<i class='bx bxs-circle'></i> <span class="text-secondary">Front-End
-                    Web Developer</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2015</p>
+                            Web Developer</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2015</p>
                 </span>
                 <br>
                 <h5 style="color: #344563;" class="fs-4">
-                    It designs your websites, which are your face in the online world. It offers solutions to all your needs, including e-commerce sites.
+                    It designs your websites, which are your face in the online world. It offers solutions to all your
+                    needs, including e-commerce sites.
                 </h5>
                 <section class="sect">
                     <span class=" cond fw-semibold">html</span>
@@ -89,7 +92,7 @@
                 </section>
                 <br>
                 <button type="button" class="botn" data-bs-toggle="modal" data-bs-target="#staticBackdrop5">See
-                project</button>
+                    project</button>
             </div>
             <div style="width: 100%;">
                 <img src="./Img/Agency360.png" alt="" width="100%" height="100%" class="">
@@ -104,8 +107,9 @@
                         <div class="modal-body p-1">
                             <div class="">
                                 <h1 class="fw-bold fs-40">360 Agency</h1>
-                                <p class="fs-4">Design<i class='bx bxs-circle'></i> <span class="text-secondary">Front-end Web
-                                    Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2025
+                                <p class="fs-4">Design<i class='bx bxs-circle'></i> <span
+                                        class="text-secondary">Front-end Web
+                                        Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2025
                                 </p>
                             </div>
                             <div style="width: 100%;">
@@ -123,8 +127,9 @@
                                     <div class="box">
                                     </div>
                                     <div class="box3 border-top m-2">
-                                        <button type="button" class="botn02"><a href="https://360agency22.netlify.app/" target="_blank" style="text-decoration: none;">See live <img src="Icon.png"
-                                            alt=""></a></button>
+                                        <button type="button" class="botn02"><a href="https://360agency22.netlify.app/"
+                                                target="_blank" style="text-decoration: none;">See live <img
+                                                    src="Icon.png" alt=""></a></button>
                                         <button type="button" class="botn2">See source <img src="Frame.png"
                                                 alt=""></button>
                                     </div>
@@ -133,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> <!--here-->
         </aside>
     </div>
 
@@ -290,27 +295,70 @@
     <div class="wraps yesDisplay">
         <aside class="boxi mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3"
-                    style="width: 100%;">
+                <img src="./Img/Agency360.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
-                <h1 class="fw-bold fs-40">Tonic</h1>
+                <h1 class="fw-bold fs-40">360 Agency Design</h1>
                 <div>
-                    <p class="fs-4">CANOPY<i class='bx bxs-circle'> </i><span class="text-secondary fs-5"> Back End Dev
-                        </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
+                    <p class="fs-4">Design 360<i class='bx bxs-circle'> </i><span class="text-secondary fs-5"> Front-End
+                            Web Developer
+                        </span><i class='bx bxs-circle'></i><span class="text-secondary">2024
+                    </p>
                 </div>
                 <h5 style="color: #344563;" class="fs-4">
-                    A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    It designs your websites, which are your face in the online world. It offers solutions to all your
+                    needs, including e-commerce sites.
                 </h5>
                 <section class="box4" style="flex-wrap: wrap;">
                     <span class=" conol fw-semibold">html</span>
                     <span class=" conol fw-semibold">css</span>
                     <span class=" conol fw-semibold">javascript</span>
                 </section>
-                <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop9">
                     See project
                 </button>
             </div>
+            <div class="modal fade " id="staticBackdrop9" data-bs-backdrop="static" data-bs-keyboard="false"
+                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-sm" style="max-width: 968px;height: 100%;">
+                    <div class="modal-content p-3 ">
+                        <button type="button " class="btn-close styleIt" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                        <div class="modal-body p-1">
+                            <div class="">
+                                <h1 class="fw-bold fs-40">360 Agency</h1>
+                                <p class="fs-4">Design<i class='bx bxs-circle'></i> <span
+                                        class="text-secondary">Front-end Web
+                                        Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2025
+                                </p>
+                            </div>
+                            <div style="width: 100%;">
+                                <img src="./Img/Agency360.png" alt="" width="50%" height="50%" class="p-3"
+                                    style="width: 100%; height: 50%;">
+                            </div>
+                            <div class="d-flex" style="height: 100%; width: 100%;">
+                                <p class="fs-2 fw-semibold text-secondary">
+                                    Design And Software Suitable For Your Business
+                                </p>
+                                <div class="sect0" style="flex-wrap: wrap; max-width: 100%;">
+                                    <span class=" cond fw-semibold p-1">html</span>
+                                    <span class=" cond fw-semibold p-1">css</span>
+                                    <span class=" cond fw-semibold p-1">Javascript</span>
+                                    <div class="box">
+                                    </div>
+                                    <div class="box3 border-top m-2">
+                                        <button type="button" class="botn02"><a href="https://360agency22.netlify.app/"
+                                                target="_blank" style="text-decoration: none;">See live <img
+                                                    src="Icon.png" alt=""></a></button>
+                                        <button type="button" class="botn2">See source <img src="Frame.png"
+                                                alt=""></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!--here-->
         </aside>
     </div>
 
@@ -642,18 +690,18 @@
                 <p>If you have an application you are interested in developing, a feature that you need built or a
                     project that needs coding. I'd love to help with it!</p>
                 <div class="mb-3">
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Lorem Ipsium">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="loremipsum@gmail.com">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="E-mail Adress">
                 </div>
                 <div class="mb-3">
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                        placeholder="Write your text here"></textarea>
+                        placeholder="Write your message here"></textarea>
                 </div>
-                <button type="button" class="button fw-semibold"><a href="mailto:timivictor565@gmail.com"
-                        style="text-decoration: none;">Get In Touch</a></button>
+                <button type="button" class="button fw-semibold"><a href="#" style="text-decoration: none;">Get In
+                        Touch</a>
+                </button>
             </div>
 
         </div>
