--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="content">
-        <nav class="navbar navbar-expand-lg py-2">
+        <nav class="navbar navbar-expand-lg py-2" id="Portfolio">
             <div class="container-fluid px-4">
                 <a class="navbar-brand text-primary fw-semibold fs-4" href="#">My Logo</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
@@ -31,15 +31,15 @@
                     <ul class="navbar-nav ms-lg-auto p-3">
                         <li class="nav-item p-0">
                             <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#">Portfolio</a>
+                                href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#">About</a>
+                                href="#About">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#">Contact </a>
+                                href="">Contact </a>
                         </li>
                     </ul>
                 </div>
@@ -47,7 +47,7 @@
         </nav>
         <!-- page content start here -->
         <div class="containers mobilevw">
-            <div class="contents">
+            <div class="contents " id="Portfolio">
                 <h1 class="fw-bold">I Am Akinola Victor.
                     <span>Glad to see you!</span>
                 </h1>
@@ -574,7 +574,7 @@
 
     <!--Desktop and Mobile screen-->
     <div style="background-color: #ffffff;" class="boxil2">
-        <div class="d-flex boxil">
+        <div class="d-flex boxil" id="About">
             <aside class=" d-flex">
                 <div class="p-2" style="width: 100%;">
                     <h1 class="fw-bold fs-40"> About Myself </h1>
@@ -601,6 +601,7 @@
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop4">Get my Resume
                     </button>
+                    <button type="button" class=" btn btn-outline-primary"><a href="#portfolio1">Portfolio</a></button>
                 </div>
                 <!--Collapse/Accordion-->
                 <div style="width: 95%; height: 100%;">
