--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Micro.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
@@ -48,9 +49,15 @@
         <!-- page content start here -->
         <div class="containers mobilevw">
             <div class="contents " id="Portfolio">
-                <h1 class="fw-bold">I Am Akinola Victor.
-                    <span>Glad to see you!</span>
-                </h1>
+                <div class="scroll-content px-5">
+                    <div class="scroll-content-container">
+                        <h1 class="fw-bold  scroll-content-container-text ">I am</h1>
+                        <ul class="scroll-content-container-list">
+                            <li class="scroll-content-container-list-item fs-1">Akinola Victor</li>
+                            <li class="scroll-content-container-list-item fs-1">Glad to see you!</li>
+                        </ul>
+                    </div>
+                </div>
                 <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
                     website Look through some of my work and experience! If you like what you see and have a project you
                     need coded, don't hesitate to contact me.</p>
@@ -631,6 +638,11 @@
                                             class="flates p-2">
                                             <img src="./Img/css!.png" alt="CSS" height="50px" width="50px">
                                             <p class="p-2 fs-5 fw-semibold" style="color: #253858;">CSS</p>
+                                        </div>
+                                        <div style="display: flex; flex-direction: column;  width: 100%;"
+                                            class="flates p-2">
+                                            <img src="./Img/python.jpeg" alt="CSS" height="50px" width="50px">
+                                            <p class="p-2 fs-5 fw-semibold" style="color: #253858;">Python</p>
                                         </div>
                                     </div>
                                 </div>
