--- a/index.html
+++ b/index.html
@@ -49,13 +49,24 @@
         <!-- page content start here -->
         <div class="containers mobilevw">
             <div class="contents " id="Portfolio">
-                <div class="scroll-content px-5">
+                <div class="scroll-content noDisplay px-5">
                     <div class="scroll-content-container">
-                        <h1 class="fw-bold  scroll-content-container-text ">I am</h1>
+                        <h1 class="fw-semibold  scroll-content-container-text ">I am</h1>
                         <ul class="scroll-content-container-list">
                             <li class="scroll-content-container-list-item fs-1">Akinola Victor</li>
-                            <li class="scroll-content-container-list-item fs-1">Glad to see you!</li>
+                            <li class="scroll-content-container-list-item fs-1">Glad to meet you!</li>
                         </ul>
+                    </div>
+                </div>
+                <div>
+                    <div class="yesDisplay">
+                        <div class="wrapper">
+                            <div class="static-text">I am</div>
+                            <div class="dynamic-text">
+                                <li><span>Akinola Victor</span></li>
+                                <li><span>Glad to meet you</span></li>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
@@ -358,7 +369,7 @@
                                                 target="_blank" style="text-decoration: none;">See live <img
                                                     src="Icon.png" alt=""></a></button>
                                         <button type="button" class="botn2">See source <img src="Frame.png"
-                                                alt=""></button>
+                                            alt=""></button>
                                     </div>
                                 </div>
                             </div>
@@ -605,10 +616,12 @@
                                     class="fa-brands fa-linkedin" style="color: #3271b3;"></i></a>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop4">Get my Resume
-                    </button>
-                    <button type="button" class=" btn btn-outline-primary"><a href="#portfolio1">Portfolio</a></button>
+                    <div> 
+                        <button type="button" class="btn btn-outline-primary mb-1" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop4">Get my Resume
+                        </button>
+
+                    </div>
                 </div>
                 <!--Collapse/Accordion-->
                 <div style="width: 95%; height: 100%;">
