added whatsapp link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="">Contact </a>
+                                href="#contact">Contact </a>
                         </li>
                     </ul>
                 </div>
@@ -77,7 +77,7 @@
                     <div style="display: inline-block; text-align: center;" class="social-icons">
                         <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
                                 class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
-                        <a href=""><i class="fa-brands fa-square-whatsapp" style="color: #09fb72;"></i></a>
+                        <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp" style="color: #09fb72;"></i></a>
                         <a target="_blank" href="https://github.com/Alphaboy20023"><i class="fa-brands fa-github"
                                 style="color: #191a19;"></i></a>
                         <a href="mailto:timivictor565@gmail.com"><i class="fa-solid fa-envelope"
