--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         <div style="display: inline-block; text-align: center;" class="social-icons">
                             <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
                                     class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
-                            <a href=""><i class="fa-brands fa-square-whatsapp" style="color: #09fb72;"></i></a>
+                            <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp" style="color: #09fb72;"></i></a>
                             <a target="_blank" href="https://github.com/Alphaboy20023"><i class="fa-brands fa-github"
                                     style="color: #191a19;"></i></a>
                             <a href="mailto:timivictor565@gmail.com"><i class="fa-solid fa-envelope"
