--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     See project
                 </button>
             </div>
-            <!-- modal mobile screen 1 -->
+            <!-- modal mobilescreen 1 -->
             <div class="modal fade " id="staticBackdrop9" data-bs-backdrop="static" data-bs-keyboard="false"
                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog modal-sm" style="max-width: 968px;height: 100%;">
@@ -419,7 +419,7 @@
             </div>
         </aside>
     </div>
-    <!-- Modal for Screen 2 -->
+    <!-- Modal for MobileScreen 2 -->
     <div class="modal fade " id="staticBackdrop12" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm" style="max-width: 968px;height: 100%;">
@@ -448,7 +448,7 @@
                             <div class="box">
                             </div>
                             <div class="box3 border-top m-2">
-                                <button type="button" class="botn02"><a href="" target="_blank"
+                                <button type="button" class="botn02"><a href=""
                                         style="text-decoration: none;">See live <img src="Icon.png" alt=""></a></button>
                                 <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
                             </div>
@@ -524,7 +524,7 @@
                             <div class="box">
                             </div>
                             <div class="box3 border-top m-2">
-                                <button type="button" class="botn02"><a href="" target="_blank"
+                                <button type="button" class="botn02"><a href="https://victorboyapi.netlify.app/" target="_blank"
                                         style="text-decoration: none;">See live <img src="Icon.png" alt=""></a></button>
                                 <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
                             </div>
@@ -566,7 +566,7 @@
     </div>
 
 
-    <!--Modal Content-->
+    <!--Modal Content screen4-->
     <div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm" style="max-width: 968px;">
