--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
                     <div class="d-flex" style="height: 100%; width: 100%;">
                         <p class="fs-2 fw-semibold text-secondary">
                             I developed this responsive web application with React, implementing Redux for
-                            centralized state management and React Router for seamless navigation. The
-                            architecture leverages functional components with hooks, paired with modern CSS
-                            methodologies, to ensure maintainable and performant code.
+                            centralized state management and React Router for seamless navigation. 
+                            <!-- The architecture leverages functional components with hooks, paired with modern CSS
+                            methodologies, to ensure maintainable and performant code. -->
                         </p>
                         <div class="sect0" style="flex-wrap: wrap; max-width: 100%;">
                             <span class=" cond fw-semibold p-1">html</span>
