--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
                         <div class="modal-body p-1">
                             <div class="">
                                 <h1 class="fw-bold fs-40"><span class="text-primary">Get</span>Change</h1>
-                                <p class="fs-4">any<i class='bx bxs-circle'></i> <span
-                                        class="text-secondary">Front
+                                <p class="fs-4">any<i class='bx bxs-circle'></i> <span class="text-secondary">Front
                                         End Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2025
                                 </p>
                             </div>
@@ -448,8 +447,8 @@
                             <div class="box">
                             </div>
                             <div class="box3 border-top m-2">
-                                <button type="button" class="botn02"><a href=""
-                                        style="text-decoration: none;">See live <img src="Icon.png" alt=""></a></button>
+                                <button type="button" class="botn02"><a href="" style="text-decoration: none;">See live
+                                        <img src="Icon.png" alt=""></a></button>
                                 <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
                             </div>
                         </div>
@@ -511,7 +510,7 @@
                     <div class="d-flex" style="height: 100%; width: 100%;">
                         <p class="fs-2 fw-semibold text-secondary">
                             I developed this responsive web application with React, implementing Redux for
-                            centralized state management and React Router for seamless navigation. 
+                            centralized state management and React Router for seamless navigation.
                             <!-- The architecture leverages functional components with hooks, paired with modern CSS
                             methodologies, to ensure maintainable and performant code. -->
                         </p>
@@ -524,8 +523,9 @@
                             <div class="box">
                             </div>
                             <div class="box3 border-top m-2">
-                                <button type="button" class="botn02"><a href="https://victorboyapi.netlify.app/" target="_blank"
-                                        style="text-decoration: none;">See live <img src="Icon.png" alt=""></a></button>
+                                <button type="button" class="botn02"><a href="https://victorboyapi.netlify.app/"
+                                        target="_blank" style="text-decoration: none;">See live <img src="Icon.png"
+                                            alt=""></a></button>
                                 <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
                             </div>
                         </div>
@@ -718,9 +718,7 @@
                         </div>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-outline-primary mb-1" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop4">Get my Resume
-                        </button>
+                        <a class="btn btn-outline-primary mb-1" href="cv.html" target="_blank">Get my Resume </a>
 
                     </div>
                 </div>
@@ -816,19 +814,21 @@
                 <h4>Contact Me</h4>
                 <p>If you have an application you are interested in developing, a feature that you need built or a
                     project that needs coding. I'd love to help with it!</p>
-                <div class="mb-3">
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
-                </div>
-                <div class="mb-3">
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="E-mail Adress">
-                </div>
-                <div class="mb-3">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                        placeholder="Write your message here"></textarea>
-                </div>
-                <button type="button" class="button fw-semibold"><a href="#" style="text-decoration: none;">Get In
-                        Touch</a>
-                </button>
+
+                <form  name="contact" method="POST" data-netlify="true">
+                    <div class="mb-3">
+                        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="email Address">
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                            placeholder="Write your message here"></textarea>
+                    </div>
+                    <button type="submit" class="button fw-semibold"> Get In Touch </button>
+                </form>
             </div>
 
         </div>
