--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
         }
 
         .section h2 {
-            border-bottom: 2px solid #ddd;
+            border-bottom: 2px solid #ddd;                   
             padding-bottom: 5px;
         }
 
@@ -42,6 +42,25 @@
 
         .skill-list li {
             margin-bottom: 5px;
+        }
+
+        button{
+            padding: 8px;
+            border-radius: 7px;
+            border: none;
+            background-color: blue;
+            height: 40px;
+             
+        }
+        button a {
+            text-decoration: none;
+            color: white;
+            font-size: 15px;
+        }
+
+        footer{
+            border-top: 3px solid #ddd;
+            padding-top: 15px; 
         }
     </style>
 </head>
@@ -99,6 +118,9 @@
             <p>Brief description of your responsibilities.</p> -->
         </div>
 
+        <footer>
+            <button ><a href="index.html"> < Back To my Portfolio</a></button>
+        </footer>
     </div>
 
 </body>
