--- a/index.html
+++ b/index.html
@@ -815,17 +815,20 @@
                 <p>If you have an application you are interested in developing, a feature that you need built or a
                     project that needs coding. I'd love to help with it!</p>
 
-                <form  name="contact" method="POST" data-netlify="true">
+                <form action="https://formspree.io/f/xqaeozbv" method="POST">
                     <div class="mb-3">
-                        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name"
+                        name="name">
                     </div>
                     <div class="mb-3">
                         <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="email Address">
+                            placeholder="email Address"
+                            name="email">
                     </div>
                     <div class="mb-3">
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                            placeholder="Write your message here"></textarea>
+                            placeholder="Write your message here"
+                            name="message"></textarea>
                     </div>
                     <button type="submit" class="button fw-semibold"> Get In Touch </button>
                 </form>
