--- a/resume.html
+++ b/resume.html
@@ -84,24 +84,45 @@
         </div>
 
         <div class="section">
-            <h2>Skills</h2>
+            <h2>Professional Skills</h2>
             <ul class="skill-list">
                 <li style="font-weight: bold;">Frontend Web Developer</li>
-                <!-- <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li> -->
+                <ul class="skill-list">
+                    <li>HTML</li>
+                    <li>CSS &  BootStrap </li>
+                    <li>JavaScript</li>
+                    <li>Reactjs</li>
+                    <li>Redux Toolkit</li>
+                    <li>Git, GitHub</li>
+                </ul>
                 <li style="font-weight: bold;">Backend Web Developer</li>
+                <ul class="skill-list">
+                    <li>Python</li>
+                    <li>Django</li>
+                    <li>REST Api</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Other/Soft Skills</h2>
+            <ul class="skill-list">
                 <li>Teamwork</li>
                 <li>Problem Solving</li>
                 <li>Eager to Learn</li>
+                <li>communication</li>
+                <li>logical thinking</li>
+                <li>Time management</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>Education</h2>
-            <p>UnderGraduate</p>
-            <!-- <p><strong>Your Degree/Diploma</strong> - Your Institution Name</p>
-            <p>Graduation Year: Year</p> -->
+            <p><strong>Undergraduate Studies</strong></p>
+            <p><strong>College - Federal Government College, Lagos</strong></p>
+            <p>Start date: 2014</p>
+            <p>End date: 2020</p>
+            <!-- <p>Graduation Year: Year</p> -->
         </div>
 
         <!-- <div class="section">
@@ -116,6 +137,13 @@
             <!-- <p><strong>Job Title</strong> - Company Name</p>
             <p>Dates of Employment: Start Date - End Date</p>
             <p>Brief description of your responsibilities.</p> -->
+        </div>
+
+        <div class="section">
+            <h2> Training </h2>
+            <p><strong>FullStack Web Developer at Torillo academy, Ikeja</strong></p>
+            <p>Start date: Dec 4,2024 </p>
+            <p> End date: April ,2025</p>
         </div>
 
         <footer>
