--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1" href="cv.html" target="_blank">Get my Resume </a>
+                        <a class="btn btn-outline-primary mb-1" href="resume.html" target="_blank">Get my Resume </a>
 
                     </div>
                 </div>
