--- a/index.html
+++ b/index.html
@@ -718,8 +718,7 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1" href="resume.html" target="_blank">Get my Resume </a>
-
+                        <a class="btn btn-outline-primary mb-1" href="file:///C:/Users/timiv/Desktop/CV%20Template%20-Torilo%20Academy%20-%20NEST%20(1).docx/CVTemplateToriloAcademyNEST_1_.docx.html" target="_blank">Get my Resume </a>
                     </div>
                 </div>
                 <!--Collapse/Accordion-->
