--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <div class="content">
-        <nav class="navbar navbar-expand-lg py-2" id="Portfolio">
+    <div class="content" id="portfolio">
+        <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light" id="Portfolio">
             <div class="container-fluid px-4">
-                <a class="navbar-brand text-primary fw-semibold fs-4" href="#">My Logo</a>
+                <a class="navbar-brand text-primary fw-semibold fs-4" href="#">iam AkinolaVictor</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#top-navbar" aria-controls="top-navbar">
                     <i class='bx bx-menu'></i>
@@ -74,7 +74,7 @@
                     need coded, don't hesitate to contact me.</p>
                 <p class="text-primary fw-semibold">LET'S CONNECT</p>
                 <div>
-                    <div style="display: inline-block; text-align: center;" class="social-icons">
+                    <div style="display: inline-block; text-align: center;" class="social-icons" id="contact">
                         <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
                                 class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
                         <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp"
