--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@
             <div class="container-fluid px-4">
                 <a class="navbar-brand text-primary fw-semibold fs-4" href="#">iam AkinolaVictor</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#top-navbar" aria-controls="top-navbar">
+                    data-bs-target="#top-navbar" aria-controls="top-navbar" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <i class='bx bx-menu'></i>
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="top-navbar" aria-labelledby="top-navbar">
-                    <!-- navBar content -->
-                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#top-navbar" aria-controls="top-navbar">
-                        <div class="d-flex justify-content-end p-2 container">
-                            <i class='bx bx-x py-4'></i>
-                        </div>
-                    </button>
-                    <ul class="navbar-nav ms-lg-auto p-3">
-                        <li class="nav-item p-0">
-                            <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#portfolio">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#About">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
-                                href="#contact">Contact </a>
-                        </li>
-                    </ul>
+                    <div class="offcanvas-header">
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav ms-lg-auto p-3">
+                            <li class="nav-item p-0">
+                                <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
+                                    href="#portfolio" onclick="closeNavbar()">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
+                                    href="#About" onclick="closeNavbar()">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" style="color: #344563; font-weight: 500;" aria-current="page"
+                                    href="#contact" onclick="closeNavbar()">Contact </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
+
         <!-- page content start here -->
         <div class="containers mobilevw">
-            <div class="contents " id="Portfolio">
+            <div class="contents ">
                 <div class="scroll-content noDisplay px-5">
                     <div class="scroll-content-container">
                         <h1 class="fw-semibold  scroll-content-container-text ">I am</h1>
@@ -58,6 +58,7 @@
                         </ul>
                     </div>
                 </div>
+                <!-- desktop view here -->
                 <div>
                     <div class="yesDisplay">
                         <div class="wrapper">
@@ -69,12 +70,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="last-screen text-secondary">
+                    <div class="h3 fw-bold">I am Akinola Victor</div>
+                    <div class="h3 fw-bold">Glad to meet you</div>
+                </div>
                 <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
                     website Look through some of my work and experience! If you like what you see and have a project you
                     need coded, don't hesitate to contact me.</p>
                 <p class="text-primary fw-semibold">LET'S CONNECT</p>
                 <div>
-                    <div style="display: inline-block; text-align: center;" class="social-icons" id="contact">
+                    <div style="display: inline-block; text-align: center;" class="social-icons">
                         <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
                                 class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
                         <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp"
@@ -689,10 +694,10 @@
             </div>
         </div> i
     </div>
-
     <!--Desktop and Mobile screen-->
+    <div id="About"></div>
     <div style="background-color: #ffffff;" class="boxil2">
-        <div class="d-flex boxil" id="About">
+        <div class="d-flex boxil">
             <aside class=" d-flex">
                 <div class="p-2" style="width: 100%;">
                     <h1 class="fw-bold fs-40"> About Myself </h1>
@@ -718,7 +723,9 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1" href="file:///C:/Users/timiv/Desktop/CV%20Template%20-Torilo%20Academy%20-%20NEST%20(1).docx/CVTemplateToriloAcademyNEST_1_.docx.html" target="_blank">Get my Resume </a>
+                        <a class="btn btn-outline-primary mb-1"
+                            href="file:///C:/Users/timiv/Desktop/CV%20Template%20-Torilo%20Academy%20-%20NEST%20(1).docx/CVTemplateToriloAcademyNEST_1_.docx.html"
+                            target="_blank">Get my Resume </a>
                     </div>
                 </div>
                 <!--Collapse/Accordion-->
@@ -815,19 +822,17 @@
                     project that needs coding. I'd love to help with it!</p>
 
                 <form action="https://formspree.io/f/xqaeozbv" method="POST">
-                    <div class="mb-3">
+                    <div class="mb-3" id="contact">
                         <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name"
-                        name="name">
+                            name="name">
                     </div>
                     <div class="mb-3">
                         <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="email Address"
-                            name="email">
+                            placeholder="email Address" name="email">
                     </div>
                     <div class="mb-3">
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                            placeholder="Write your message here"
-                            name="message"></textarea>
+                            placeholder="Write your message here" name="message"></textarea>
                     </div>
                     <button type="submit" class="button fw-semibold"> Get In Touch </button>
                 </form>
@@ -840,6 +845,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
+    <script>
+        function closeNavbar() {
+            const topNavbar = document.getElementById('top-navbar');
+            const bsOffcanvas = bootstrap.Offcanvas.getInstance(topNavbar);
+            if (bsOffcanvas) {
+                bsOffcanvas.hide();
+            }
+        }
+    </script>
 </body>
 
 </html>
