--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     project</button>
             </div>
             <div style="width: 100%;">
-                <img src="./Img/Agency360.png" alt="" width="100%" height="100%" class="">
+                <img src="./Img/Agency360.png" alt="" width="100%" height="95%" class="mt-3">
             </div>
             <!--Desktop screen1 Modal -->
             <div class="modal fade " id="staticBackdrop5" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -776,18 +776,24 @@
                             <div id="collapseTwo" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <div style="width: 100%; height: 50%;" class="m-1">
+                                    <div style="width: 100%; height: 20%;" class="m-1">
                                         <div class="victor p-2">
-                                            <div style="display: flex; flex-direction: column; width: 100%;"
+                                            <div style="display: flex; flex-direction: column; width: 33%;"
                                                 class="flates p-2">
-                                                <img src="./Img/bootstrap.jpg" alt="CSS" height="80px" width="90px">
-                                                <p class="fs-5 p-2 fw-semibold" style="color: #253858;">Bootstrap</p>
+                                                <img src="./Img/bootstrap.jpg" alt="CSS" height="80px" width="auto">
+                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Bootstrap</p>
                                             </div>
-                                            <div style="display: flex; flex-direction: column; width: 100%;"
-                                                class="flates px-2">
-                                                <img src="./Img/react.avif" alt="CSS" height="80px" width="auto"
+                                            <div style="display: flex; flex-direction: column; width: 33%;"
+                                                class="flates px-3">
+                                                <img src="./Img/react.jpeg" alt="CSS" height="80px" width="auto"
                                                     class="border-5">
-                                                <p class="fs-5 p-2 fw-semibold" style="color: #253858;">React</p>
+                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">React</p>
+                                            </div>
+                                            <div style="display: flex; flex-direction: column; width: 33%;"
+                                                class="flates px-3">
+                                                <img src="./Img/react.jpeg" alt="CSS" height="80px" width="auto"
+                                                    class="border-5">
+                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django</p>
                                             </div>
                                         </div>
                                     </div>
@@ -804,7 +810,8 @@
                             <div id="collapseThree" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <li class="fs-6 fw-semibold" style="color: #253858;">Front-End Web Developer</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">Frontend Web Developer</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">Backend Web Developer</li>
                                 </div>
                             </div>
                         </div>
