--- a/index.html
+++ b/index.html
@@ -778,23 +778,23 @@
                                 <div class="accordion-body">
                                     <div style="width: 100%; height: 20%;" class="m-1">
                                         <div class="victor p-2">
-                                            <div style="display: flex; flex-direction: column; width: 33%;"
+                                            <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates p-2">
-                                                <img src="./Img/bootstrap.jpg" alt="CSS" height="80px" width="auto">
+                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px" width="auto">
                                                 <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Bootstrap</p>
                                             </div>
-                                            <div style="display: flex; flex-direction: column; width: 33%;"
+                                            <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates px-3">
-                                                <img src="./Img/react.jpeg" alt="CSS" height="80px" width="auto"
+                                                <img src="./Img/react_main.png" alt="CSS" height="70px" width="auto"
                                                     class="border-5">
                                                 <p class="fs-5 p-1 fw-semibold" style="color: #253858;">React</p>
                                             </div>
-                                            <div style="display: flex; flex-direction: column; width: 33%;"
-                                                class="flates px-3">
-                                                <img src="./Img/react.jpeg" alt="CSS" height="80px" width="auto"
-                                                    class="border-5">
-                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django</p>
-                                            </div>
+                                            <div style="display: flex; flex-direction: column; width: 100%;"
+                                            class="flates px-3">
+                                            <img src="./Img/django_main.jpeg" alt="CSS" height="50px" width="auto"
+                                                class="border-5">
+                                            <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django Rest  Framework.</p>
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -812,6 +812,9 @@
                                 <div class="accordion-body">
                                     <li class="fs-6 fw-semibold" style="color: #253858;">Frontend Web Developer</li>
                                     <li class="fs-6 fw-semibold" style="color: #253858;">Backend Web Developer</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">REST APIs</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">MySQL</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">Git, Github</li>
                                 </div>
                             </div>
                         </div>
